hamburger menu yapildi

--- a/cursorai.html
+++ b/cursorai.html
@@ -50,7 +50,7 @@
 	<div class="container">
 		<section id="hakkimda" class="content-section">
 			<h2 class="section-title">Hakkımda</h2>
-			<p>Merhaba, ben Doğru Hoca. [Buraya kendi özgeçmişinizi ve deneyimlerinizi ekleyebilirsiniz]</p>
+			<p>Merhaba, Ben Doğru Hoca. [Buraya kendi özgeçmişinizi ve deneyimlerinizi ekleyebilirsiniz]</p>
 		</section>
 
 		<section id="videolar" class="content-section">
