--- a/cursorai.html
+++ b/cursorai.html
@@ -149,7 +149,7 @@
 		// Toggle navbar style on scroll
 		window.addEventListener('scroll', function () {
 			const nav = document.querySelector('nav');
-			if (window.scrollY > 100) {
+			if (window.scrollY > document.querySelector('header').offsetHeight) {
 				nav.classList.add('scrolled');
 			} else {
 				nav.classList.remove('scrolled');
