--- a/cursorai.html
+++ b/cursorai.html
@@ -107,16 +107,24 @@
 			</ul>
 		</section>
 
-		
-
-		<section id="iletisim" class="content-section">
+		<section id="iletisim" class="content-section contact-section">
 			<h2 class="section-title">İletişim</h2>
-			<p>E-posta: [E-posta adresiniz]</p>
-			<p>Telefon: [Telefon numaranız]</p>
-			<div class="social-links">
-				<a href="https://www.youtube.com" target="_blank">YouTube</a>
-				<a href="https://www.linkedin.com" target="_blank">LinkedIn</a>
-				<a href="https://www.twitter.com" target="_blank">Twitter</a>
+			<div class="contact-details">
+				<p><strong>E-posta:</strong> <a href="mailto:info@dogruhoca.com">info@dogruhoca.com</a></p>
+				<p><strong>Telefon:</strong> <a href="tel:+905555555555">+90 555 555 5555</a></p>
+				<p><strong>Adres:</strong> İstanbul, Türkiye</p>
+			</div>
+			<div class="contact-form">
+				<h3>Bize Ulaşın</h3>
+				<form action="contact.php" method="POST">
+					<label for="name">Adınız:</label>
+					<input type="text" id="name" name="name" placeholder="Adınızı girin" required>
+					<label for="email">E-posta:</label>
+					<input type="email" id="email" name="email" placeholder="E-posta adresinizi girin" required>
+					<label for="message">Mesajınız:</label>
+					<textarea id="message" name="message" rows="5" placeholder="Mesajınızı yazın" required></textarea>
+					<button type="submit">Gönder</button>
+				</form>
 			</div>
 		</section>
 	</div>
