we added my contact info to contact section

--- a/cursorai.html
+++ b/cursorai.html
@@ -110,8 +110,8 @@
 		<section id="iletisim" class="content-section contact-section">
 			<h2 class="section-title">İletişim</h2>
 			<div class="contact-details">
-				<p><strong>E-posta:</strong> <a href="mailto:info@dogruhoca.com">info@dogruhoca.com</a></p>
-				<p><strong>Telefon:</strong> <a href="tel:+905555555555">+90 555 555 5555</a></p>
+				<p><strong>E-posta:</strong> <a href="mailto:dogrumehmet@gmail.com">dogrumehmet@gmail.com</a></p>
+				<p><strong>Telefon:</strong> <a href="tel:+905057810760">+90 505 781 07 60</a></p>
 				<p><strong>Adres:</strong> İstanbul, Türkiye</p>
 			</div>
 			<div class="contact-form">
@@ -126,11 +126,22 @@
 					<button type="submit">Gönder</button>
 				</form>
 			</div>
+			<div>
+					<p>
+						<strong>Görüş ve Önerileriniz:</strong> Web sitemizi geliştirmek için önerileriniz veya yazılımla ilgili herhangi bir şikayetiniz varsa, lütfen bizimle iletişime geçin. 
+						<br>
+						<strong>Telefon:</strong> <a href="tel:+905431413099">+90 543 141 30 99</a>
+						<br>
+						<strong>E-posta:</strong> <a href="mailto:abdallamorsii@gmail.com">abdallamorsii@gmail.com</a>
+					</p>
+			</div>
 		</section>
 	</div>
 
-	<footer>
+	<footer style="display: flex; justify-content: center; align-items: center; gap: 10px;">
+		<img src="img/logo.png" alt="Developer Logo" style="border-radius: 50%; width: 50px; height: auto;">
 		<p>&copy; 2024 Doğru Hoca - Tüm Hakları Saklıdır</p>
+		<img src="img/dvlp.cc.logo.png" alt="Developer Logo" style="border-radius: 50%; width: 50px; height: auto;">
 	</footer>
 
 	<script>
