--- a/cursorai.html
+++ b/cursorai.html
@@ -8,6 +8,16 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<meta name="author" content="Doğru Hoca">
 	<link rel="stylesheet" href="style.css">
+	<script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
+</script>
+<script type="text/javascript">
+   (function(){
+      emailjs.init({
+        publicKey: "zSgGEoZd5YJ8c7TOP",
+      });
+   })();
+</script>
     <link rel="icon" type="image/png" href="img/logo.png">
 	<title>Doğru Hoca - Kişisel Eğitim Portalı</title>
 </head>
@@ -116,15 +126,15 @@
 			</div>
 			<div class="contact-form">
 				<h3>Bize Ulaşın</h3>
-				<form action="contact.php" method="POST">
-					<label for="name">Adınız:</label>
-					<input type="text" id="name" name="name" placeholder="Adınızı girin" required>
-					<label for="email">E-posta:</label>
-					<input type="email" id="email" name="email" placeholder="E-posta adresinizi girin" required>
-					<label for="message">Mesajınız:</label>
-					<textarea id="message" name="message" rows="5" placeholder="Mesajınızı yazın" required></textarea>
-					<button type="submit">Gönder</button>
-				</form>
+					<form id="contact-form">
+						<label for="name">Adınız:</label>
+						<input type="text" id="name" name="name" placeholder="Adınızı girin" required>
+						<label for="email">E-posta:</label>
+						<input type="email" id="email" name="email" placeholder="E-posta adresinizi girin" required>
+						<label for="message">Mesajınız:</label>
+						<textarea id="message" name="message" rows="5" placeholder="Mesajınızı yazın" required></textarea>
+						<button type="button" onclick="sendEmail()">Gönder</button>
+					</form>
 			</div>
 			<div>
 					<p>
@@ -141,7 +151,7 @@
 	<footer style="display: flex; justify-content: center; align-items: center; gap: 10px;">
 		<img src="img/logo.png" alt="Developer Logo" style="border-radius: 50%; width: 50px; height: auto;">
 		<p>&copy; 2024 Doğru Hoca - Tüm Hakları Saklıdır</p>
-		<img src="img/dvlp.cc.logo.png" alt="Developer Logo" style="border-radius: 50%; width: 50px; height: auto;">
+		<img src="img/dvlp.cc.logo.png" alt="Developer Logo" style="border-radius: 50%; width: 70px; height: auto;">
 	</footer>
 
 	<script>
@@ -204,6 +214,45 @@
 				});
 			});
 		});
+
+		// EmailJS integration for sending emails
+		function sendEmail() {
+			const name = document.getElementById("name").value;
+			const email = document.getElementById("email").value;
+			const message = document.getElementById("message").value;
+
+			if (!name || !email || !message) {
+				alert("Lütfen tüm alanları doldurun.");
+				return;
+			}
+
+			// Get the current date and time
+			const timestamp = new Date().toLocaleString("tr-TR", {
+				year: "numeric",
+				month: "long",
+				day: "numeric",
+				hour: "2-digit",
+				minute: "2-digit",
+				second: "2-digit",
+			});
+
+			emailjs.send("service_9s4uy1j", "template_jgm1tc3", {
+				name: name,
+				email: email,
+				message: message,
+				time: timestamp, // Include the timestamp in the email
+			}).then(
+				(response) => {
+					alert("Mesajınız başarıyla gönderildi!");
+					document.getElementById("contact-form").reset();
+				},
+				(error) => {
+					alert("Mesaj gönderilirken bir hata oluştu. Lütfen tekrar deneyin.");
+					console.error("EmailJS Error:", error);
+				}
+			);
+		}
 	</script>
+	<script src="script.js"></script>
 </body>
 </html>
