baslik yeniden duzenlendi

--- a/olmpiyat.html
+++ b/olmpiyat.html
@@ -13,7 +13,7 @@
 </head>
 <body class="homepage">
 	<header>
-		<h1>Doğru Hoca</h1>
+		<h1>Dogruhoca</h1>
 		<p>Olimpiyat Sayfasına Hoş Geldiniz</p>
 	</header>
 
