--- a/cursorai.html
+++ b/cursorai.html
@@ -23,7 +23,7 @@
 </head>
 <body class="homepage">
 	<header>
-		<h1>Doğru Hoca</h1>
+		<h1>Dogruhoca</h1>
 		<div class="header-content">
 			<p>Eğitim ve Öğretim Portalına Hoş Geldiniz</p>
 		</div>
