--- a/dashboard.html
+++ b/dashboard.html
@@ -8,11 +8,12 @@
 	<meta name="author" content="Doğru Hoca">
 	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+	<link rel="icon" type="image/png" href="img/logo.png">
 	<title>Doğru Hoca - Yönetim Paneli</title>
 </head>
 <body>
 	<header>
-		<h1>Yönetim Paneli</h1>
+		<h1>Dogruhoca</h1>
 		<p>Sayfalarınızı kolayca yönetin</p>
 	</header>
 
