--- a/php-version/dashboard-backup.html
+++ b/php-version/dashboard-backup.html
@@ -1,20 +1,15 @@
-<?php
-require_once 'config.php';
-require_once 'auth.php';
-require_once 'functions.php';
-
-requireAdmin();
-?>
 <!DOCTYPE html>
 <html lang="tr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard - Doğru Hoca</title>
-    <link rel="stylesheet" href="static/admin-dashboard.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='admin-dashboard.css') }}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
-    <link rel="icon" type="image/png" href="static/img/logo.png">
+    <link rel="icon" type="image/png" href="../static/img/logo.png">
 </head>
+
 <body>
     <div class="dashboard-wrapper">
         <!-- Sidebar -->
@@ -45,13 +40,17 @@ requireAdmin();
                     <i class="fas fa-info-circle"></i>
                     <span>Site Bilgileri</span>
                 </a>
+                <a href="{{ url_for('list_users') }}" class="nav-link">
+                    <i class="fas fa-users"></i>
+                    <span>Kullanıcılar</span>
+                </a>
             </nav>
 
             <div class="sidebar-footer">
-                <a href="index.php" class="btn-secondary">
+                <a href="{{ url_for('home') }}" class="btn-secondary">
                     <i class="fas fa-globe"></i> Ana Sayfa
                 </a>
-                <a href="logout.php" class="btn-danger">
+                <a href="{{ url_for('logout') }}" class="btn-danger">
                     <i class="fas fa-sign-out-alt"></i> Çıkış
                 </a>
             </div>
@@ -63,7 +62,8 @@ requireAdmin();
             <section id="overview-section" class="content-section active">
                 <div class="section-header">
                     <h2><i class="fas fa-chart-line"></i> Genel Bakış</h2>
-                    <p class="section-description">Dashboard'a hoş geldiniz! Buradan tüm site içeriğini yönetebilirsiniz.</p>
+                    <p class="section-description">Dashboard'a hoş geldiniz! Buradan tüm site içeriğini
+                        yönetebilirsiniz.</p>
                 </div>
 
                 <div class="stats-grid">
@@ -94,7 +94,8 @@ requireAdmin();
                     <i class="fas fa-info-circle"></i>
                     <div>
                         <h3>Nasıl Kullanılır?</h3>
-                        <p>Sol menüden yönetmek istediğiniz bölümü seçin. Her bölümde içerik ekleyebilir, düzenleyebilir veya silebilirsiniz.</p>
+                        <p>Sol menüden yönetmek istediğiniz bölümü seçin. Her bölümde içerik ekleyebilir, düzenleyebilir
+                            veya silebilirsiniz.</p>
                     </div>
                 </div>
             </section>
@@ -146,7 +147,8 @@ requireAdmin();
                 <div class="section-header">
                     <div>
                         <h2><i class="fas fa-info-circle"></i> Site Bilgileri</h2>
-                        <p class="section-description">Ana sayfadaki "Hakkımda" ve "İletişim" bölümlerini buradan düzenleyin</p>
+                        <p class="section-description">Ana sayfadaki "Hakkımda" ve "İletişim" bölümlerini buradan
+                            düzenleyin</p>
                     </div>
                 </div>
 
@@ -155,7 +157,8 @@ requireAdmin();
                         <h3><i class="fas fa-user"></i> Hakkımda Bölümü</h3>
                         <div class="form-group">
                             <label for="about_text">Hakkımda Metni</label>
-                            <textarea id="about_text" name="about_text" rows="6" class="form-control" placeholder="Kendiniz hakkında bilgi yazın..."></textarea>
+                            <textarea id="about_text" name="about_text" rows="6" class="form-control"
+                                placeholder="Kendiniz hakkında bilgi yazın..."></textarea>
                             <small>Bu metin ana sayfanın "Hakkımda" bölümünde görünecektir</small>
                         </div>
                     </div>
@@ -164,15 +167,18 @@ requireAdmin();
                         <h3><i class="fas fa-envelope"></i> İletişim Bilgileri</h3>
                         <div class="form-group">
                             <label for="contact_email">E-posta Adresi</label>
-                            <input type="email" id="contact_email" name="contact_email" class="form-control" placeholder="ornek@email.com">
+                            <input type="email" id="contact_email" name="contact_email" class="form-control"
+                                placeholder="ornek@email.com">
                         </div>
                         <div class="form-group">
                             <label for="contact_phone">Telefon Numarası</label>
-                            <input type="text" id="contact_phone" name="contact_phone" class="form-control" placeholder="+90 XXX XXX XX XX">
+                            <input type="text" id="contact_phone" name="contact_phone" class="form-control"
+                                placeholder="+90 XXX XXX XX XX">
                         </div>
                         <div class="form-group">
                             <label for="contact_address">Adres</label>
-                            <input type="text" id="contact_address" name="contact_address" class="form-control" placeholder="Şehir, Ülke">
+                            <input type="text" id="contact_address" name="contact_address" class="form-control"
+                                placeholder="Şehir, Ülke">
                         </div>
                     </div>
 
@@ -199,7 +205,8 @@ requireAdmin();
                 </div>
                 <div class="form-group">
                     <label for="video-url">YouTube Embed URL *</label>
-                    <input type="url" id="video-url" class="form-control" placeholder="https://www.youtube.com/embed/..." required>
+                    <input type="url" id="video-url" class="form-control"
+                        placeholder="https://www.youtube.com/embed/..." required>
                     <small>YouTube'da video → Paylaş → Yerleştir → URL'yi kopyalayın</small>
                 </div>
                 <div class="form-group">
@@ -282,6 +289,7 @@ requireAdmin();
         </div>
     </div>
 
-    <script src="static/admin-dashboard.js"></script>
+    <script src="{{ url_for('static', filename='admin-dashboard.js') }}"></script>
 </body>
+
 </html>
